[package]
name = "run_goal_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
env_logger = "0.9.0"
lettre = "0.9.6"
lettre_email = "0.9.4"
log = "0.4.16"
mockall = "0.11.0"
reqwest = {version = "0.11.10", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
url = "2.2.2"
